--- a/index.html
+++ b/index.html
@@ -27,49 +27,49 @@
                     <td>(+375 29) 520 82 03</td>
                 </tr>
                 <tr>
-                    <td>skype: </td>
-                    <td>kit88888888</td>
+                    <td>telegram: </td>
+                    <td>(+375 29) 520 82 03</td>
                 </tr>
                 <tr>
-                    <td>github: </td>
-                    <td><a href="https://github.com/AlehAnishchanka">https://github.com/AlehAnishchanka</a></td>
+                    <td>viber: </td>
+                    <td>(+375 29) 520 82 03</td>
                 </tr>
             </table>
         </section>
         <article>
             <h4>about me:</h4>
-            <p>I work as programmer <b>PHP</b> for 3 year in STiM (Brest).
-                I serve CMS system <b>Bitrix</b> in our company.<br>
-                I am administrator, business analyst and programmer in one face.
-                Three years ago the company management <br> chose *ERP* system for company. I and two my colleagues
-                wrote temporary system, witch allowed partially <br> fulfill the necessary functions. Our system
-                worked for 2 years. Now it is changed with <i>1C ER</i>. <br> Our system was built on 3 products
-                interaction between which was was carried out using <b>SOAP</b> services. <br> My part was made on
-                <b>Bitrix</b>.
-                Now company actively working with <i>1C</i>. It is not very interesting for me. <br> I want to work as
-                <b>WEB engineer</b>. It is the reason I came to study for <i>RS school</i>.<br>
-                I am persistent, easily trained, communicable.
+            <p>I work as programmer <b>PHP</b> for 4 year for STiM (Brest). I serve CMS system Bitrix24 for our company.<br>
+                For 3 years I worked as administrator, business analyst and programmer in one face.<br>
+                Last year I work as programmer. My last project is Servis Desk IT Department of our company.<br>
+                It includes <b>chat-bot</b> as enter point, <b>web-form</b> ( 8 complicated dinamic form in 1, writen with <b>Vue.js</b> ),<br>
+                api for recive and transmit data ( <b>php</b>, <b>sql</b> ) , and backend ( <b>php</b>, <b>sql</b>, <b>oop</b> ).<br>
+                This application is bilded into cms <b>Bitrix24</b> and uses standart functionality <b>Bitrix24</b>.<br>
             </p>
         </article>
 
-        <h4>my skills: PHP, SQL, HTTP, JS basics</h4>
-
+        <h4>my skills: <b>PHP</b>, <b>SQL</b>, <b>JS</b>, <b>Vue.js</b>, cms <b>Bitrix24</b></h4>
+        <h4>my skills: also I use <b>HTML</b>, <b>CSS</b> and <b>bootstrap-vue</b> in my work</h4>
+        
         <article>
             <h4>education:</h4>
             <ul>
-                <li>Minsk Radio-engineering institute (BGUIR)</li>
-                <li>PHP courses ATEVI</li>
+                <li>Minsk Radio-engineering institute (BGUIR) 1987</li>
+                <li>manual courses testing EPAM 2015</li>
+                <li>PHP courses ATEVI 2019</li>
                 <li>JS online courses hexlet</li>
                 <li>SQL online sql-ex.ru</li>
             </ul>
         </article>
-        <b>code examples are here:</b>
-        <a href="https://github.com/AlehAnishchanka/task_report_bitrix">https://github.com/AlehAnishchanka/task_report_bitrix</a><br><br>
-        <b>languages</b>
         <ul>
-            <li>english - A2 strong</li>
+            <li>russian - native speaker</li>
+            <li>english - A2-B1</li>
             <li>polish - B1</li>
         </ul>
+                <article>
+            <h4>additionaly about me:</h4>
+            <p>I am easily trained person. I permanently improve my skills. <br>I am stress-resistant and not conflict person. I know how to work in a team.
+            </p>
+        </article>
     </main>
 </body>
 
