--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
         </section>
         <article>
             <h4>about me:</h4>
-            <p>I work as programmer <b>PHP</b> for 4 year for STiM (Brest). I serve CMS system Bitrix24 for our company.<br>
-                For 3 years I worked as administrator, business analyst and programmer in one face.<br>
-                Last year I work as programmer. My last project is Servis Desk IT Department of our company.<br>
-                It includes <b>chat-bot</b> as enter point, <b>web-form</b> ( 8 complicated dinamic form in 1, writen with <b>Vue.js</b> ),<br>
-                api for recive and transmit data ( <b>php</b>, <b>sql</b> ) , and backend ( <b>php</b>, <b>sql</b>, <b>oop</b> ).<br>
-                This application is bilded into cms <b>Bitrix24</b> and uses standart functionality <b>Bitrix24</b>.<br>
+            <p>I have been working as a <b>PHP</b> developer at ARTBYTE.AGENCY since February 2022.<br>
+                I am currently focusing on the development and customization of CMS <b>Bitrix24</b> components and modernization of that CMS.<br>
+                in accordance with the clints' requirements. I also develop various reports as regards such CMS. I have experience<br>
+                in chatbot development, as well as integration of <b>Bitrix24</b> with other systems.
+            </p>
+            <p>I worked as a <b>PHP</b> programmer at STiM for 4 years (2018-2022). My core task was to customize and maintain CMS system <b>Bitrix24</b><br>
+                for the company. During the first 3 years I worked as programmer, as well as <b>Bitrix24</b> administrator and business analyst,<br>
+                all rolled into one.<br>
+                Since 2021 my role was focused on being a programmer only.
             </p>
         </article>
 
