--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
         <article>
             <h4>about me:</h4>
             <p>I have been working as a <b>PHP</b> developer at ARTBYTE.AGENCY since February 2022.<br>
-                I am currently focusing on the development and customization of CMS <b>Bitrix24</b> components and modernization of that CMS.<br>
-                in accordance with the clints' requirements. I also develop various reports as regards such CMS. I have experience<br>
+                I am currently focusing on development and customization of CMS <b>Bitrix24</b> components and modernization of that CMS.<br>
+                in accordance with the clients' requirements. I also develop various reports as regards such CMS. I have experience<br>
                 in chatbot development, as well as integration of <b>Bitrix24</b> with other systems.
             </p>
             <p>I worked as a <b>PHP</b> programmer at STiM for 4 years (2018-2022). My core task was to customize and maintain CMS system <b>Bitrix24</b><br>
-                for the company. During the first 3 years I worked as programmer, as well as <b>Bitrix24</b> administrator and business analyst,<br>
+                for the company. During the first 3 years I worked as a programmer, as well as <b>Bitrix24</b> administrator and business analyst,<br>
                 all rolled into one.<br>
                 Since 2021 my role was focused on being a programmer only.
             </p>
         </article>
 
-        <h4>my skills: <b>PHP</b>, <b>SQL</b>, <b>JS</b>, <b>Vue.js</b>, cms <b>Bitrix24</b></h4>
+        <h4>my skills: <b>PHP</b>, <b>SQL</b>, <b>JS</b>, <b>Vue.js</b>, CMS <b>Bitrix24</b></h4>
         <h4>my skills: also I use <b>HTML</b>, <b>CSS</b> and <b>bootstrap-vue</b> in my work</h4>
         
         <article>
             <h4>education:</h4>
             <ul>
-                <li>Minsk Radio-engineering institute (BGUIR) 1987</li>
+                <li>Minsk Radio-engineering institute (BGUIR)</li>
                 <li>manual courses testing EPAM 2015</li>
                 <li>PHP courses ATEVI 2019</li>
                 <li>JS online courses hexlet</li>
