--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <article>
             <h4>about me:</h4>
             <p>I have been working as a <b>PHP</b> developer at ARTBYTE.AGENCY since February 2022.<br>
-                I am currently focusing on development and customization of CMS <b>Bitrix24</b> components and modernization of that CMS.<br>
-                in accordance with the clients' requirements. I also develop various reports as regards such CMS. I have experience<br>
+                I am currently focusing on development and customization of CMS <b>Bitrix24</b> components and modernization of that CMS
+                in accordance with the clients' requirements. I also develop various reports as regards such CMS. I have experience
                 in chatbot development, as well as integration of <b>Bitrix24</b> with other systems.
             </p>
             <p>I worked as a <b>PHP</b> programmer at STiM for 4 years (2018-2022). My core task was to customize and maintain CMS system <b>Bitrix24</b><br>
