--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="photo" src="src/cv_photo.jpeg" alt="Place for photo" height="266" width="266">
         </section>
         <section class="contacts">
-            <h4>contacts:</h4>
+            <h4>контакты:</h4>
             <table>
                 <tr>
                     <td>email: </td>
@@ -37,40 +37,42 @@
             </table>
         </section>
         <article>
-            <h4>about me:</h4>
-            <p>I have been working as a <b>PHP</b> developer at ARTBYTE.AGENCY since February 2022.<br>
-                I am currently focusing on development and customization of CMS <b>Bitrix24</b> components and modernization of that CMS
-                in accordance with the clients' requirements. I also develop various reports as regards such CMS. I have experience
-                in chatbot development, as well as integration of <b>Bitrix24</b> with other systems.
+            <h4>обо мне:</h4>
+            <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с февраля 2022г.<br>
+                В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов,<br>
+                а также работа с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами,<br>
+                выполнение ряда функций по администрированию.<br>
+                Большинство моих проектов и задач было связано с коробочными версиями портала, хотя случалось работать и с облачными.<br>
+                За время работы на ARTBYTE.AGENCY я выполнил Более 100 проектов и задач различного типа и разной сложности.<br>
+                В настощее время я работаю с 10 порталами для различных клиентов. В течении рабочего дня ( при необходимости ) могу переключаться 
+                на работу с разными задачами для разных порталов.
             </p>
-            <p>I worked as a <b>PHP</b> programmer at STiM for 4 years (2018-2022). My core task was to customize and maintain CMS system <b>Bitrix24</b><br>
-                for the company. During the first 3 years I worked as a programmer, as well as <b>Bitrix24</b> administrator and business analyst,<br>
-                all rolled into one.<br>
-                Since 2021 my role was focused on being a programmer only.
+            <p>Я работал <b>PHP</b> программистом в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей было сопровождение портала <b>Bitrix24</b><br>
+                и его кастомизация для нужд компании. В течении первых 3 лет я работал программистом <b>Bitrix24</b> администратором и бизнес-аналитиком<br>
+                в одном лице.<br>
+                С 2021г моя деятельность сфокусировалась исключительно на программировании.
             </p>
         </article>
 
-        <h4>my skills: <b>PHP</b>, <b>SQL</b>, <b>JS</b>, <b>Vue.js</b>, CMS <b>Bitrix24</b></h4>
-        <h4>my skills: also I use <b>HTML</b>, <b>CSS</b> and <b>bootstrap-vue</b> in my work</h4>
+        <h4>мои компетенции:  CMS <b>Bitrix24</b>, <b>PHP</b>, <b>SQL</b>, <b>JS</b></h4>
+        <h4>также я использую <b>HTML</b>, <b>CSS</b>, <b>bootstrap</b>,<b>Vue.js</b> в моей работе</h4>
         
         <article>
-            <h4>education:</h4>
+            <h4>образование:</h4>
             <ul>
-                <li>Minsk Radio-engineering institute (BGUIR)</li>
-                <li>manual courses testing EPAM 2015</li>
-                <li>PHP courses ATEVI 2019</li>
-                <li>JS online courses hexlet</li>
-                <li>SQL online sql-ex.ru</li>
+                <li>Минский радиотехнический интитут (БГУИР)</li>
+                <li>Очные курсы мануальных тестеровщиков EPAM 2015</li>
+                <li>Различные online курсы</li>
             </ul>
         </article>
         <ul>
-            <li>russian - native speaker</li>
-            <li>english - A2-B1</li>
-            <li>polish - B1</li>
+            <li>русский -    родной</li>
+            <li>английский - A2-B1</li>
+            <li>польский -   разговорный</li>
         </ul>
                 <article>
-            <h4>additionaly about me:</h4>
-            <p>I am easily trained person. I permanently improve my skills. <br>I am stress-resistant and not conflict person. I know how to work in a team.
+            <h4>дополнительно обо мне:</h4>
+            <p>Я легко обучающаяся личность. Постоянно совершенствую свои навыки. <br>Я стрессоустойчив и не конфликтен. Умею работать в комманде.<br>Я мультипроектен и мультизадачен.
             </p>
         </article>
     </main>
