--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <section>
             <h2>Aleh Anishchanka (Олег Анищенко)</h2>
             <address>Brest. Belarus</address>
-            <img class="photo" src="src/photo.jpg" alt="Place for photo" height="266" width="266">
+            <img class="photo" src="src/cv_photo.jpeg" alt="Place for photo" height="266" width="266">
         </section>
         <section class="contacts">
-            <h4>contacts:</h4>
+            <h4>контакты:</h4>
             <table>
                 <tr>
                     <td>email: </td>
@@ -37,37 +37,42 @@
             </table>
         </section>
         <article>
-            <h4>about me:</h4>
-            <p>I work as programmer <b>PHP</b> for 4 year for STiM (Brest). I serve CMS system Bitrix24 for our company.<br>
-                For 3 years I worked as administrator, business analyst and programmer in one face.<br>
-                Last year I work as programmer. My last project is Servis Desk IT Department of our company.<br>
-                It includes <b>chat-bot</b> as enter point, <b>web-form</b> ( 8 complicated dinamic form in 1, writen with <b>Vue.js</b> ),<br>
-                api for recive and transmit data ( <b>php</b>, <b>sql</b> ) , and backend ( <b>php</b>, <b>sql</b>, <b>oop</b> ).<br>
-                This application is bilded into cms <b>Bitrix24</b> and uses standart functionality <b>Bitrix24</b>.<br>
+            <h4>обо мне:</h4>
+            <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с февраля 2022г.<br>
+                В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов,<br>
+                а также работа с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами,<br>
+                выполнение ряда функций по администрированию.<br>
+                Большинство моих проектов и задач было связано с коробочными версиями портала, хотя случалось работать и с облачными.<br>
+                За время работы на ARTBYTE.AGENCY я выполнил Более 100 проектов и задач различного типа и разной сложности.<br>
+                В настощее время я работаю с 10 порталами для различных клиентов. В течении рабочего дня ( при необходимости ) могу переключаться 
+                на работу с разными задачами для разных порталов.
+            </p>
+            <p>Я работал <b>PHP</b> программистом в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей было сопровождение портала <b>Bitrix24</b><br>
+                и его кастомизация для нужд компании. В течении первых 3 лет я работал программистом <b>Bitrix24</b> администратором и бизнес-аналитиком<br>
+                в одном лице.<br>
+                С 2021г моя деятельность сфокусировалась исключительно на программировании.
             </p>
         </article>
 
-        <h4>my skills: <b>PHP</b>, <b>SQL</b>, <b>JS</b>, <b>Vue.js</b>, cms <b>Bitrix24</b></h4>
-        <h4>my skills: also I use <b>HTML</b>, <b>CSS</b> and <b>bootstrap-vue</b> in my work</h4>
+        <h4>мои компетенции:  CMS <b>Bitrix24</b>, <b>PHP</b>, <b>SQL</b>, <b>JS</b></h4>
+        <h4>также я использую <b>HTML</b>, <b>CSS</b>, <b>bootstrap</b>,<b>Vue.js</b> в моей работе</h4>
         
         <article>
-            <h4>education:</h4>
+            <h4>образование:</h4>
             <ul>
-                <li>Minsk Radio-engineering institute (BGUIR) 1987</li>
-                <li>manual courses testing EPAM 2015</li>
-                <li>PHP courses ATEVI 2019</li>
-                <li>JS online courses hexlet</li>
-                <li>SQL online sql-ex.ru</li>
+                <li>Минский радиотехнический интитут (БГУИР)</li>
+                <li>Очные курсы мануальных тестеровщиков EPAM 2015</li>
+                <li>Различные online курсы</li>
             </ul>
         </article>
         <ul>
-            <li>russian - native speaker</li>
-            <li>english - A2-B1</li>
-            <li>polish - B1</li>
+            <li>русский -    родной</li>
+            <li>английский - A2-B1</li>
+            <li>польский -   разговорный</li>
         </ul>
                 <article>
-            <h4>additionaly about me:</h4>
-            <p>I am easily trained person. I permanently improve my skills. <br>I am stress-resistant and not conflict person. I know how to work in a team.
+            <h4>дополнительно обо мне:</h4>
+            <p>Я легко обучающаяся личность. Постоянно совершенствую свои навыки. <br>Я стрессоустойчив и не конфликтен. Умею работать в комманде.<br>Я мультипроектен и мультизадачен.
             </p>
         </article>
     </main>
