--- a/index.html
+++ b/index.html
@@ -38,20 +38,30 @@
         </section>
         <article>
             <h4>обо мне:</h4>
-            <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с февраля 2022г.<br>
-                В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов,<br>
-                а также работа с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами,<br>
+            <p>февраль 2022 по настоящее время - ARTBYTE.AGENCY(Россия, Кострома)</p>
+            <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с февраля 2022г.
+                В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов,
+                а также работа с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами,
                 выполнение ряда функций по администрированию.<br>
                 Большинство моих проектов и задач было связано с коробочными версиями портала, хотя случалось работать и с облачными.<br>
                 За время работы на ARTBYTE.AGENCY я выполнил Более 100 проектов и задач различного типа и разной сложности.<br>
-                В настощее время я работаю с 10 порталами для различных клиентов. В течении рабочего дня ( при необходимости ) могу переключаться 
+                В настощее время я работаю с 10 порталами для различных клиентов. В течении рабочего дня ( при необходимости )<br> могу переключаться 
                 на работу с разными задачами для разных порталов.
             </p>
-            <p>Я работал <b>PHP</b> программистом в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей было сопровождение портала <b>Bitrix24</b><br>
-                и его кастомизация для нужд компании. В течении первых 3 лет я работал программистом <b>Bitrix24</b> администратором и бизнес-аналитиком<br>
-                в одном лице.<br>
-                С 2021г моя деятельность сфокусировалась исключительно на программировании.
+            <p>с 2018 по 2022 - STiM (Беларусь, Брест)</p>
+            <p>Я работал <b>PHP</b> программистом в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей было сопровождение портала <b>Bitrix24</b>
+                и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом <b>Bitrix24</b> администратором и бизнес-аналитиком
+                в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
             </p>
+            <h4>из последних моих проектов:</h4>
+            <p>Реализация кастомного сервис-деска. (Существующий клиента не удовлентворил.) Выполнено на смарт-процессах, задачах, списках. В списках 3-х
+                уровневая иерархия обращений, sla, юзеры техподдержки, разбитые на уровни поддержки. Первая версия формы обращений выполнена мной на
+                Vue.js. Дедлайны элементов обращений и задач в зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии
+                ТП (всего их 5) на текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой обращений
+                реализовано 5 кастомных отчетов с логикой заказчика.<br>
+                В настоящий момент клиент заказал доработку сервис-деска. Синхронизация с ZABIX. При наступлении определенных событий ZABIX
+                необходимо создавать автоматические обращения при помощи кастомного веб-хука.
+            </p>    
         </article>
 
         <h4>мои компетенции:  CMS <b>Bitrix24</b>, <b>PHP</b>, <b>SQL</b>, <b>JS</b></h4>
@@ -72,7 +82,7 @@
         </ul>
                 <article>
             <h4>дополнительно обо мне:</h4>
-            <p>Я легко обучающаяся личность. Постоянно совершенствую свои навыки. <br>Я стрессоустойчив и не конфликтен. Умею работать в комманде.<br>Я мультипроектен и мультизадачен.
+            <p>Я легко обучающаяся личность. Постоянно совершенствую свои навыки. <br>Я стрессоустойчив и неконфликтен. Умею работать в комманде.<br>Я мультипроектен и мультизадачен.
             </p>
         </article>
     </main>
