--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
                 в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
             </p>
             <h4>из последних моих проектов:</h4>
-            <p>Реализация кастомного сервис-деска. (Существующий клиента не удовлентворил.) Выполнено на смарт-процессах, задачах, списках. В списках 3-х
-                уровневая иерархия обращений, sla, юзеры техподдержки, разбитые на уровни поддержки. Первая версия формы обращений выполнена мной на
-                Vue.js. Дедлайны элементов обращений и задач в зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии
-                ТП (всего их 5) на текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой обращений
-                реализовано 5 кастомных отчетов с логикой заказчика.<br>
-                В настоящий момент клиент заказал доработку сервис-деска. Синхронизация с ZABIX. При наступлении определенных событий ZABIX
-                необходимо создавать автоматические обращения при помощи кастомного веб-хука.
+            <p>Реализация кастомного сервис-деска. (Существующий клиента не удовлентворил.) Выполнено на смарт-процессах,<br>
+                задачах, списках. В списках 3-х уровневая иерархия обращений, sla, юзеры техподдержки, разбитые на уровни<br>
+                поддержки. Первая версия формы обращений выполнена мной на Vue.js. Дедлайны элементов обращений и задач в<br>
+                зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5) на<br>
+                текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой<br>
+                обращений реализовано 5 кастомных отчетов с логикой заказчика.<br>
+                В настоящий момент клиент заказал доработку сервис-деска. Синхронизация с ZABIX. При наступлении определенных<br>
+                событий ZABIX необходимо создавать автоматические обращения при помощи кастомного веб-хука.
             </p>    
         </article>
 
