--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
             </table>
         </section>
         <article>
-            <h4>обо мне:</h4>
-            <p>февраль 2022 по настоящее время - ARTBYTE.AGENCY(Россия, Кострома)</p>
+            <h4>опыт работы:</h4>
+            <p><u>февраль 2022 по настоящее время - ARTBYTE.AGENCY (Россия, Кострома)</u></p>
             <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с февраля 2022г.
                 В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов,
                 а также работа с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами,
-                выполнение ряда функций по администрированию.<br>
-                Большинство моих проектов и задач было связано с коробочными версиями портала, хотя случалось работать и с облачными.<br>
+                выполнение ряда функций по администрированию.<br><br>
+                Большинство моих проектов и задач было связано с коробочными версиями портала, хотя случалось работать и с облачными.<br><br>
                 За время работы на ARTBYTE.AGENCY я выполнил Более 100 проектов и задач различного типа и разной сложности.<br>
-                В настощее время я работаю с 10 порталами для различных клиентов. В течении рабочего дня ( при необходимости )<br> могу переключаться 
+                В настощее время я работаю с 10 порталами для различных клиентов. В течении рабочего дня при необходимости<br> могу переключаться 
                 на работу с разными задачами для разных порталов.
             </p>
-            <p>с 2018 по 2022 - STiM (Беларусь, Брест)</p>
+            <p><u>с 2018 по 2022 - STiM (Беларусь, Брест)</u></p>
             <p>Я работал <b>PHP</b> программистом в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей было сопровождение портала <b>Bitrix24</b>
                 и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом <b>Bitrix24</b> администратором и бизнес-аналитиком
                 в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
@@ -59,14 +59,14 @@
                 поддержки. Первая версия формы обращений выполнена мной на Vue.js. Дедлайны элементов обращений и задач в<br>
                 зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5) на<br>
                 текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой<br>
-                обращений реализовано 5 кастомных отчетов с логикой заказчика.<br>
-                В настоящий момент клиент заказал доработку сервис-деска. Синхронизация с ZABIX. При наступлении определенных<br>
+                обращений реализовано 5 кастомных отчетов с логикой заказчика.<br><br>
+                В настоящий момент клиент заказал доработку сервис-деска. Синхронизация с ZABIX. При наступлении определенных
                 событий ZABIX необходимо создавать автоматические обращения при помощи кастомного веб-хука.
             </p>    
         </article>
 
         <h4>мои компетенции:  CMS <b>Bitrix24</b>, <b>PHP</b>, <b>SQL</b>, <b>JS</b></h4>
-        <h4>также я использую <b>HTML</b>, <b>CSS</b>, <b>bootstrap</b>,<b>Vue.js</b> в моей работе</h4>
+        <h4>также я использую в моей работе: <b>HTML</b>, <b>CSS</b>, <b>bootstrap</b>,<b>Vue.js</b></h4>
         
         <article>
             <h4>образование:</h4>
@@ -82,8 +82,8 @@
             <li>польский -   разговорный</li>
         </ul>
                 <article>
-            <h4>дополнительно обо мне:</h4>
-            <p>Я легко обучающаяся личность. Постоянно совершенствую свои навыки. <br>Я стрессоустойчив и неконфликтен. Умею работать в комманде.<br>Я мультипроектен и мультизадачен.
+            <h4>обо мне:</h4>
+            <p>Я легко обучающаяся личность. Постоянно совершенствую свои навыки. <br>Я стрессоустойчив и неконфликтен. Умею работать в команде.<br>Я мультипроектен и мультизадачен.
             </p>
         </article>
     </main>
