--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
             </p>
             <h4>из последних моих проектов:</h4>
-            <p>Реализация кастомного сервис-деска. (Существующий клиента не удовлентворил.) Выполнено на смарт-процессах,<br>
-                задачах, списках. В списках 3-х уровневая иерархия обращений, sla, юзеры техподдержки, разбитые на уровни<br>
+            <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на смарт-процессах,<br>
+                задачах, списках. В списках трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии<br>
                 поддержки. Первая версия формы обращений выполнена мной на Vue.js. Дедлайны элементов обращений и задач в<br>
                 зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5) на<br>
                 текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой<br>
