--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 а также работа с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами,
                 выполнение ряда функций по администрированию.<br><br>
                 Большинство моих проектов и задач было связано с коробочными версиями портала, хотя случалось работать и с облачными.<br><br>
-                За время работы на ARTBYTE.AGENCY я выполнил Более 100 проектов и задач различного типа и разной сложности.<br>
+                За время работы на ARTBYTE.AGENCY я выполнил более 100 проектов и задач различного типа и разной сложности.<br><br>
                 В настощее время я работаю с 10 порталами для различных клиентов. В течении рабочего дня при необходимости<br> могу переключаться 
                 на работу с разными задачами для разных порталов.
             </p>
