--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main class="center">
         <section>
-            <h2>Aleh Anishchanka (Олег Анищенко)</h2>
+            <h2>Aleh Anishchanka (Олег Анищенко)</h2><br><br>
             <address>Brest. Belarus</address>
             <img class="photo" src="src/cv_photo.jpeg" alt="Place for photo" height="266" width="266">
         </section>
