--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <main class="center">
         <section>
-            <h2>Aleh Anishchanka (Олег Анищенко)</h2><br><br>
-            <address>Brest. Belarus</address>
+            <h2>Aleh Anishchanka (Олег Анищенко)</h2>
+            <address>Brest. Belarus</address><br><br>
             <img class="photo" src="src/cv_photo.jpeg" alt="Place for photo" height="266" width="266">
         </section>
         <section class="contacts">
