--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 За время работы на ARTBYTE.AGENCY я выполнил более 100 проектов и задач различного типа и разной сложности.<br><br>
                 В настощее время я работаю с 10 порталами для различных клиентов. В течении рабочего дня при необходимости<br> могу переключаться 
                 на работу с разными задачами для разных порталов.<br><br>
-                Имею опыт работы с чужим кодом. На некоторых порталах я работаю с кодом двух программистов работавших<br><br> 
+                Имею опыт работы с чужим кодом. На некоторых порталах я работаю с кодом двух программистов работавших<br>
                 до меня при отсутствии документации.
             </p>
             <p><u>с 2018 по 2022 - STiM (Беларусь, Брест)</u></p>
