--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <article>
             <h4>опыт работы:</h4>
             <p><u>февраль 2022 по настоящее время - ARTBYTE.AGENCY (Россия, Кострома)</u></p>
-            <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с февраля 2022г.
+            <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с января 2022г.
                 В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов,
                 а также работа с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами,
                 выполнение ряда функций по администрированию.<br><br>
@@ -51,19 +51,20 @@
                 до меня при отсутствии документации.
             </p>
             <p><u>с 2018 по 2022 - STiM (Беларусь, Брест)</u></p>
-            <p>Я работал <b>PHP</b> программистом в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей было сопровождение портала <b>Bitrix24</b>
-                и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом <b>Bitrix24</b> администратором и бизнес-аналитиком
-                в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
+            <p>Я работал <b>PHP</b> бизнес-аналитиком и программистом в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей 
+                было сопровождение портала <b>Bitrix24</b> и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом 
+                <b>Bitrix24</b> администратором и бизнес-аналитиком в одном лице. С 2021г моя деятельность в этой компании сфокусировалась 
+                исключительно на программировании.
             </p>
             <h4>из последних моих проектов:</h4>
             <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на смарт-процессах,<br>
-                задачах, списках. В списках трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии<br>
-                поддержки. Первая версия формы обращений выполнена мной на Vue.js. Дедлайны элементов обращений и задач в<br>
-                зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5) на<br>
-                текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой<br>
-                обращений реализовано 5 кастомных отчетов с логикой заказчика.<br><br>
-                В настоящий момент клиент заказал доработку сервис-деска. Синхронизация с ZABIX. При наступлении определенных
-                событий ZABIX необходимо создавать автоматические обращения при помощи кастомного веб-хука.
+               задачах, списках. В списках трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии<br>
+               поддержки. Первая версия формы обращений выполнена мной на Vue.js. Дедлайны элементов обращений и задач в<br>
+               зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5) на<br>
+               текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой<br>
+               обращений реализовано 5 кастомных отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. 
+               При наступлении определенных событий ZABIX создается автоматические обращения при помощи кастомного веб-хука.
+               На сегодняшний день имею предложение от сторонней организации о реализации сервис-деска для них.
             </p>    
         </article>
 
