--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         </section>
         <article>
             <h4>опыт работы:</h4>
-            <p><u>февраль 2022 по настоящее время - ARTBYTE.AGENCY (Россия, Кострома)</u></p>
+            <p><u>январь 2022 по настоящее время - ARTBYTE.AGENCY (Россия, Кострома)</u></p>
             <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с января 2022г.
                 В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов,
                 а также работа с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами,
                 выполнение ряда функций по администрированию.<br><br>
                 Большинство моих проектов и задач было связано с коробочными версиями портала, хотя случалось работать и с облачными.<br><br>
                 За время работы на ARTBYTE.AGENCY я выполнил более 100 проектов и задач различного типа и разной сложности.<br><br>
-                В настощее время я работаю с 10 порталами для различных клиентов. В течении рабочего дня при необходимости<br> могу переключаться 
-                на работу с разными задачами для разных порталов.<br><br>
+                В настощее время я работаю более чем с 10 порталами для различных клиентов. В течении рабочего дня при необходимости<br> 
+                могу переключаться на работу с разными задачами для разных порталов.<br><br>
                 Имею опыт работы с чужим кодом. На некоторых порталах я работаю с кодом двух программистов работавших<br>
                 до меня при отсутствии документации.
             </p>
