--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 до меня при отсутствии документации.
             </p>
             <p><u>с 2018 по 2022 - STiM (Беларусь, Брест)</u></p>
-            <p>Я работал <b>PHP</b> бизнес-аналитиком и программистом в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей 
+            <p>Я работал бизнес-аналитиком и программистом <b>PHP</b> в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей 
                 было сопровождение портала <b>Bitrix24</b> и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом 
                 <b>Bitrix24</b> администратором и бизнес-аналитиком в одном лице. С 2021г моя деятельность в этой компании сфокусировалась 
                 исключительно на программировании.
