--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <p><u>январь 2022 по настоящее время - ARTBYTE.AGENCY (Россия, Кострома)</u></p>
             <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с января 2022г.<br>
                 В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов,
-                а также работа с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами,
-                выполнение ряда функций по администрированию.<br><br>
+                а также работа с данными порталов и написание всевозможных <br>отчетов, интеграция порталов клиента с внешними системами,
+                выполнение ряда функций<br> по администрированию.<br><br>
                 Большинство моих проектов и задач было связано с коробочными версиями портала, хотя случалось работать и с облачными.<br><br>
                 За время работы на ARTBYTE.AGENCY я выполнил более 100 проектов и задач различного типа и разной сложности.<br><br>
                 В настощее время я работаю более чем с 10 порталами для различных клиентов. В течении рабочего дня <br>при необходимости
@@ -57,8 +57,8 @@
                 исключительно на программировании.
             </p>
             <h4>из последних моих проектов:</h4>
-            <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на смарт-процессах,<br>
-               задачах, списках. В списках трехуровневая иерархия обращений, sla, юзеры техподдержки, разбитые на линии<br>
+            <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на <br>смарт-процессах,
+               задачах, списках. В списках трехуровневая иерархия обращений, sla, юзеры техподдержки, <br>разбитые на линии
                поддержки. Первая версия формы обращений выполнена мной на Vue.js. Дедлайны элементов обращений и задач в<br>
                зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5) на<br>
                текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой<br>
