--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <h4>из последних моих проектов:</h4>
             <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на <br>смарт-процессах,
                задачах, списках. В списках трехуровневая иерархия обращений, sla, юзеры техподдержки, <br>разбитые на линии
-               поддержки. Первая версия формы обращений выполнена мной на Vue.js. Дедлайны элементов обращений и задач в<br>
-               зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5) на<br>
-               текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой<br>
+               поддержки. Первая версия формы обращений выполнена мной на Vue.js. Дедлайны элементов обращений и задач в
+               зависимости от sla, выходных и праздничных дней, доступности сотрудников ближайшей линии ТП (всего их 5) на
+               текущий и следующий дни. При  недоступности соответствующей линии - следующая. Для работы со статистикой
                обращений реализовано 5 кастомных отчетов с логикой заказчика. Сервис-деск также синхронирован с ZABIX. 
                При наступлении определенных событий ZABIX создается автоматические обращения при помощи кастомного веб-хука.
                На сегодняшний день имею предложение от сторонней организации о реализации сервис-деска для них.
