--- a/index.html
+++ b/index.html
@@ -40,21 +40,20 @@
             <h4>опыт работы:</h4>
             <p><u>январь 2022 по настоящее время - ARTBYTE.AGENCY (Россия, Кострома)</u></p>
             <p>Я работаю <b>PHP</b> разработчиком в компании ARTBYTE.AGENCY с января 2022г.<br>
-                В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов,
-                а также работа с данными порталов и написание всевозможных <br>отчетов, интеграция порталов клиента с внешними системами,
-                выполнение ряда функций<br> по администрированию.<br><br>
+                В круг моих обязанностей главным образом входит кастомизация порталов <b>Bitrix24</b> в соответствии с пожеланиями клиентов, а также работа <br>
+                с данными порталов и написание всевозможных отчетов, интеграция порталов клиента с внешними системами, выполнение ряда функций <br>
+                по администрированию.<br><br>
+            
                 Большинство моих проектов и задач было связано с коробочными версиями портала, хотя случалось работать и с облачными.<br><br>
                 За время работы на ARTBYTE.AGENCY я выполнил более 100 проектов и задач различного типа и разной сложности.<br><br>
-                В настощее время я работаю более чем с 10 порталами для различных клиентов. В течении рабочего дня <br>при необходимости
-                могу переключаться на работу с разными задачами для разных порталов.<br><br>
-                Имею опыт работы с чужим кодом. На некоторых порталах я работаю с кодом двух программистов работавших<br>
-                до меня при отсутствии документации.
+                В настощее время я работаю более чем с 10 порталами для различных клиентов. В течении рабочего дня ,при необходимости, могу переключаться<br>
+                на работу с разными задачами для разных порталов.<br><br>
+                Имею опыт работы с чужим кодом. На некоторых порталах я работаю с кодом двух программистов работавших до меня при отсутствии документации.
             </p>
             <p><u>с 2018 по 2022 - STiM (Беларусь, Брест)</u></p>
-            <p>Я работал бизнес-аналитиком и программистом <b>PHP</b> в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей 
-                было сопровождение портала <b>Bitrix24</b> и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом 
-                <b>Bitrix24</b> администратором и бизнес-аналитиком в одном лице. С 2021г моя деятельность в этой компании сфокусировалась 
-                исключительно на программировании.
+            <p>Я работал бизнес-аналитиком и программистом <b>PHP</b> в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей было сопровождение <br>
+                портала <b>Bitrix24</b> и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом <b>Bitrix24</b>, администратором 
+                и бизнес-аналитиком в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
             </p>
             <h4>из последних моих проектов:</h4>
             <p>Реализация кастомного сервис-деска (cуществующий клиента не удовлентворил). Выполнено на <br>смарт-процессах,
