--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </p>
             <p><u>с 2018 по 2022 - STiM (Беларусь, Брест)</u></p>
             <p>Я работал бизнес-аналитиком и программистом <b>PHP</b> в компании STiM (Брест) 4 года (2018-2022). Моей главной задачей было сопровождение <br>
-                портала <b>Bitrix24</b> и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом <b>Bitrix24</b>, администратором 
+                портала <b>Bitrix24</b> и его кастомизация для нужд компании. В течение первых 3 лет я работал программистом <b>Bitrix24</b>, администратором <br>
                 и бизнес-аналитиком в одном лице. С 2021г моя деятельность в этой компании сфокусировалась исключительно на программировании.
             </p>
             <h4>из последних моих проектов:</h4>
