--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     <td>viber: </td>
                     <td>(+375 29) 520 82 03</td>
                 </tr>
+                <tr>
+                    <td>linkedin: </td>
+                    <td><a hreh='www.linkedin.com/in/олег-анищенко-aa26977a' target='_blank'>Олег Анищенко</td>
+                </tr>
             </table>
         </section>
         <article>
